# robotics

./: README.md
ws/src/ground_drone_description/: CMakeLists.txt  package.xml
ws/src/ground_drone_description/gazebo/: obstacles.world
ws/src/ground_drone_description/launch/: display.launch.py
ws/src/ground_drone_description/rviz/: view_bot.rviz
ws/src/ground_drone_description/urdf/: ground_drone.urdf.xacro  robot_core.xacro
ws/src/joint_state_publisher/: CMakeLists.txt  package.xml
ws/src/joint_state_publisher/src/: joint_state_publisher.cpp
ws/src/serial_communication/: CMakeLists.txt
ws/src/serial_communication/config/: params.yaml
ws/src/serial_communication/msg/: WheelSpeeds.msg
ws/src/serial_communication/src/: serial_node.cpp
ws/src/teleop_to_serial/: CMakeLists.txt
ws/src/teleop_to_serial/src/: teleop_to_serial_node.cpp
